--- a/sass/components/main-page/_hero.scss
+++ b/sass/components/main-page/_hero.scss
@@ -9,16 +9,31 @@
   background-position: center;
   color: $primary-white-color;
 
+  @include retina {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/hero/hero-mob-2x.jpg');
+  }
+
   @include tablet {
     max-width: 768px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url('../images/hero/hero-tab.jpg');
+
+    @include retina {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../images/hero/hero-tab-2x.jpg');
+    }
   }
 
   @include desktop {
     max-width: 1600px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url('../images/hero/hero-desk.jpg');
+
+    @include retina {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../images/hero/hero-desk-2x.jpg');
+    }
   }
 }
 
