--- a/sass/components/portfolio-page/_cardset.scss
+++ b/sass/components/portfolio-page/_cardset.scss
@@ -13,6 +13,12 @@
 
   @include transition(box-shadow);
 
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
   @include tablet {
     margin: 15px;
     width: calc((100% - 4 * 15px) / 2);
@@ -26,10 +32,6 @@
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-
-  &:not(:last-child) {
-    margin-bottom: 30px;
   }
 }
 
